--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "algoliasearch": "^3.33.0",
     "gatsby": "^2.5.0",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-feed": "^2.2.0",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
@@ -29,7 +31,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^5.6.0",
     "react-typography": "^0.16.19",
+    "striptags": "^3.1.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
     "typography": "^0.16.19",
